fix: dark mode in tailwind playground

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -104,3 +104,8 @@ input[type="number"] {
   opacity: 0;
   transition: opacity 500ms ease-in;
 }
+
+
+.cm-content {
+  font-family: 'Lexend';
+}
